src/objects/FieloAlpha__LevelCriteria__c.object
<CustomObject>
    <description>Criteria that determine the level of a member in your program.</description>
    <fields>
        <fullName>FieloPLT__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DateValue__c</fullName>
        <description>Date when level criteria will be valid.</description>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldName__c</fullName>
        <description>In order to make a rule, it is necessary to choose fields to make a logical structure.</description>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldType__c</fullName>
        <description>Type of field selected.</description>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Level__c</fullName>
        <description>Level for the rule.</description>
        <label>Level</label>
        <referenceTo>FieloPLT__Level__c</referenceTo>
        <relationshipLabel>Level Criterias</relationshipLabel>
        <relationshipName>LevelCriterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Name__c</fullName>
        <description>Name of the level.</description>
        <formula>HYPERLINK(&apos;/&apos; + Id, FieloPLT__FieldName__c + &apos; &apos; + Text(FieloPLT__Operator__c ) + &apos; &apos; + FieloPLT__Values__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter a name for this level.</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NumberValue__c</fullName>
        <description>Numerical value.</description>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Operator__c</fullName>
        <description>Each value of this picklist allows to make a logical structure with fields selected.</description>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Level Criteria</label>
    <nameField>
        <label>Level Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Level Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>